# SEDSros

./: .gitignore  CMakeLists.txt  README  call.sh  mainpage.dox  manifest.xml
data/: test.ml
data/bags/pr2/: 2011-06-15-09-39-36.bag  2011-06-15-09-40-07.bag  seds_xyz.bag
data/bags/pr2/20110624/: 2011-06-24-16-38-52.bag  2011-06-24-16-39-22.bag  2011-06-24-16-39-41.bag
data/bags/pr2/20110624_res/: model.txt  seds.bag
data/bags/pr2/seds/: seds.bag  seds_model.bag
data/bags/sim/20110620/: 2011-06-20-12-57-34.bag  2011-06-20-18-55-16.bag
data/bags/sim/20110622/: 2011-06-22-16-11-47.bag  2011-06-22-16-13-17.bag  2011-06-22-16-14-07.bag  2011-06-22-16-15-19.bag  2011-06-22-16-16-17.bag
data/bags/sim/seds/: seds.bag  seds.orig.bag
launch/: jtteleop.launch  omnirob.launch  pr2.launch  seds.launch  wam.launch
lib/: driver.py
models/: model.txt  model_ml.txt  model_pr2.txt  model_pr2_xyz2.txt  model_pr2_xyz_em.txt  model_sim_xyz_em.txt  model_ts.txt
msg/: ModelParameters.msg  SedsMessage.msg
nodes/: cat_tf.py  ds_driver.py  ds_traj.py  gmr.py  norm.r  pipe.py  pr2_driver.py  test_driver.py  test_ds.py  tf2seds.py
omnirob/: master_omnirob.sh  omni2seds.py  omnirob_driver.py
pr2/: add.py  cat_tf.py  drive.sh  drive2start.sh  ds_driver.py  init.sh  iterate.sh  master_pr2.sh  pr2_driver.py  publish_rcart.py  run_tf_bag.py  start_sim.sh  start_sim_pr2.sh  start_turtlesim.sh  tf2seds.py  train.sh
results/: example_optimization.txt  example_training_run.txt
scripts/: call.sh  check_stop.sh  drive.sh  drive2start.sh  master.sh  run.sh  run_test.sh  start_sim.sh  train.sh
src/: SEDS.cpp  SEDS.h  ds_node.cpp  process_bagfile.cpp  process_bagfile.hpp  process_mlfile.cpp  process_mlfile.hpp  seds_node.cpp  seds_wrapper.cpp  seds_wrapper.hpp  teleop_pr2_arms_keyboard.cpp
src/mldemos/: SEDS.cpp  SEDS.h  datasetManager.cpp  datasetManager.h  dynamicalSEDS.cpp  dynamicalSEDS.h  notes.org  obstacles.h  public.h
srv/: DSLoaded.srv  DSSrv.srv  FloatSrv.srv  SedsModel.srv  SedsOptimize.srv
turtle/: gen_traj.py  readbag.py  replay_traj.py  start_turtlesim.sh
wam/: 2011-07-07-15-46-57.bag  master.sh  master.sh~  master_wam.sh  test.bag  tmp.bag  wam.model  wam2seds.py  wam2seds.py~  wam_driver.py
